--- a/src/app/Cpmponents/card-details/card-details.component.html
+++ b/src/app/Cpmponents/card-details/card-details.component.html
@@ -1,65 +1,95 @@
 <div class="container">
-  <div class="row">
-    <div class="col-sm-6 col-md-12">
-      <div class="h3" style="padding-left: 40px; color: rgb(70, 70, 70)">
-        Centre place Graslin - Private room La Cambronne
-        <br />
-        <span id="Rating"
-          ><svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="18"
-            height="18"
-            fill="currentColor"
-            class="bi bi-star-fill"
-            viewBox="0 0 16 16"
-          >
-            <path
-              d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"
+  <main>
+    <div class="row">
+      <div class="col-sm-6 col-md-12">
+        <div class="h3" style="padding-left: 40px; color: rgb(70, 70, 70)">
+          Centre place Graslin - Private room La Cambronne
+          <br />
+          <span id="Rating"
+            ><svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="18"
+              height="18"
+              fill="currentColor"
+              class="bi bi-star-fill"
+              viewBox="0 0 16 16"
+            >
+              <path
+                d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"
+              />
+            </svg>
+            4.98
+          </span>
+
+          <Span id="reviews">24 reviews </Span>
+          <span id="renter">renter</span>
+        </div>
+        <div id="largeimg1">
+          <img
+            src="https://a0.muscache.com/im/pictures/miso/Hosting-668146487515150072/original/8ff2a532-e0cd-41a2-9164-554c4d9eb28a.jpeg?im_w=960"
+            alt="Image 1"
+          />
+        </div>
+        <div id="smallimages2">
+          <div class="col-sm-12 col-md-12" id="2a">
+            <img
+              src="https://a0.muscache.com/im/pictures/miso/Hosting-668146487515150072/original/7da9fd6a-8d6c-4954-88b0-1fc52abc9cfd.jpeg?im_w=720"
+              alt="Image 2"
             />
-          </svg>
-          4.98
-        </span>
+          </div>
 
-        <Span id="reviews">24 reviews </Span>
-        <span id="renter">renter</span>
-      </div>
-      <div id="largeimg1">
-        <img
-          src="https://a0.muscache.com/im/pictures/miso/Hosting-668146487515150072/original/8ff2a532-e0cd-41a2-9164-554c4d9eb28a.jpeg?im_w=960"
-          alt="Image 1"
-        />
-      </div>
-      <div id="smallimages2">
-        <div class="col-sm-12 col-md-12" id="2a">
-          <img
-            src="https://a0.muscache.com/im/pictures/miso/Hosting-668146487515150072/original/7da9fd6a-8d6c-4954-88b0-1fc52abc9cfd.jpeg?im_w=720"
-            alt="Image 2"
-          />
+          <div class="col-sm-12 col-md-12" id="2b">
+            <img
+              src="https://a0.muscache.com/im/pictures/miso/Hosting-26300485/original/35989289-d57f-449a-b23b-0c285e715ee1.jpeg?im_w=720"
+              alt="Image 3"
+            />
+          </div>
         </div>
-
-        <div class="col-sm-12 col-md-12" id="2b">
-          <img
-            src="https://a0.muscache.com/im/pictures/miso/Hosting-26300485/original/35989289-d57f-449a-b23b-0c285e715ee1.jpeg?im_w=720"
-            alt="Image 3"
-          />
+        <div id="smallimages3">
+          <div class="col-sm-12 col-md-12" id="2c">
+            <img
+              src="https://a0.muscache.com/im/pictures/miso/Hosting-26300485/original/061a1f0a-27f0-4bf6-acee-05e978030487.jpeg?im_w=720"
+              alt="Image 4"
+            />
+          </div>
+          <div class="col-sm-12 col-md-12" id="2d">
+            <img
+              src="https://a0.muscache.com/im/pictures/miso/Hosting-26300485/original/88cec5b3-01ab-4d26-8597-bd3b1fc36e01.jpeg?im_w=720"
+              alt="Image 5"
+            />
+          </div>
         </div>
       </div>
-      <div id="smallimages3">
-        <div class="col-sm-12 col-md-12" id="2c">
-          <img
-            src="https://a0.muscache.com/im/pictures/miso/Hosting-26300485/original/061a1f0a-27f0-4bf6-acee-05e978030487.jpeg?im_w=720"
-            alt="Image 4"
-          />
-        </div>
-        <div class="col-sm-12 col-md-12" id="2d">
-          <img
-            src="https://a0.muscache.com/im/pictures/miso/Hosting-26300485/original/88cec5b3-01ab-4d26-8597-bd3b1fc36e01.jpeg?im_w=720"
-            alt="Image 5"
-          />
-        </div>
-      </div>
-        
     </div>
-     
+  </main>
+  <div class="floating-menu shadow p-3 mb-5 bg-white rounded">
+    <span id="price">$41<span style="font-weight: 100;font-size: medium;"> night</span></span>
+    <span id="Rating"
+    ><svg
+      xmlns="http://www.w3.org/2000/svg"
+      width="18"
+      height="18"
+      fill="currentColor"
+      class="bi bi-star-fill"
+      viewBox="0 0 16 16"
+    >
+      <path
+        d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"
+      />
+    </svg>
+    4.98
+  </span>
+  <!-- datePicker -->
+  <mat-form-field>
+    <mat-label>Enter a date range</mat-label>
+    <mat-date-range-input [rangePicker]="picker">
+      <input matStartDate placeholder="Start date">
+      <input matEndDate placeholder="End date">
+    </mat-date-range-input>
+    <mat-hint>MM/DD/YYYY – MM/DD/YYYY</mat-hint>
+    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+    <mat-date-range-picker #picker></mat-date-range-picker>
+  </mat-form-field>
   </div>
+  <p>jjjjjjjjjjjjjjjjjjjjjj</p>
 </div>
