--- a/src/app/Cpmponents/header/header.component.html
+++ b/src/app/Cpmponents/header/header.component.html
@@ -24,7 +24,7 @@
     <ul class="navbar">
       <li>
         <a href="#">
-          <div class="d-flex justify-content-around search-bar shadow p-2 mb-2 bg-body-tertiary rounded" type="button" data-bs-toggle="modal" data-bs-target="#searchModal">
+          <div class="d-flex justify-content-around search-bar shadow-sm p-2 mb-2 bg-white rounded " type="button" data-bs-toggle="modal" data-bs-target="#searchModal">
             <span>Anywhere</span>
             <div class="vr"></div>
             <span>Any week</span>
