--- a/src/app/Cpmponents/card-details/card-details.component.css
+++ b/src/app/Cpmponents/card-details/card-details.component.css
@@ -1,71 +1,100 @@
-.container{
-    position:static;
-     }
-    
-    
-    #largeimg1 {
-        width: 50%;
-        float: left;
-        padding-right: 10px;
-    }
-    
-    #largeimg1 img {
-        width: 100%;
-        height: 420px;
-    }
-    
-    
-    
-    #smallimages2  {
-        width: 25%;
-        padding-left: 5px;
-        padding-right: 5px;
-        float: left;
-    
-    }
-    
-    #smallimages2 img {
-        width: 100%;
-        height: 100%;
-        margin-bottom: 10px;
-    }
-    
-    
-    #smallimages3  {
-        width: 25%;
-        padding-left: 5px;
-        padding-right: 5px;
-        float: left;
-    
-    }
-    
-    #smallimages3 img {
-        width: 100%;
-        height: 100%;
-        margin-bottom: 10px;
-    }
-    img{
-        border-radius: 15px;
-        cursor: pointer;
-    }
-    
-    /* Hover */
-    
-    #smallimages2 .col-sm-12 img:hover,
-    #smallimages3 .col-sm-12 img:hover,
-    #largeimg1 img:hover {
-      filter: brightness(50%);
-    }
-    
-    
-    /*Paragraphs*/
-    #Rating{
-        padding-left: 55px;
-        font-size: 17px;
-    }
-    #reviews,#renter{
-        font-size: 17px;
-        padding-left: 10px;
-        text-decoration: underline;
-        font-family:sans-serif;
-    }
+.container {
+  position: static;
+}
+
+#largeimg1 {
+  width: 50%;
+  float: left;
+  padding-right: 10px;
+}
+
+#largeimg1 img {
+  width: 100%;
+  height: 420px;
+}
+
+#smallimages2 {
+  width: 25%;
+  padding-left: 5px;
+  padding-right: 5px;
+  float: left;
+}
+
+#smallimages2 img {
+  width: 100%;
+  height: 100%;
+  margin-bottom: 10px;
+}
+
+#smallimages3 {
+  width: 25%;
+  padding-left: 5px;
+  padding-right: 5px;
+  float: left;
+}
+
+#smallimages3 img {
+  width: 100%;
+  height: 100%;
+  margin-bottom: 10px;
+}
+img {
+  border-radius: 15px;
+  cursor: pointer;
+}
+
+/* Hover */
+
+#smallimages2 .col-sm-12 img:hover,
+#smallimages3 .col-sm-12 img:hover,
+#largeimg1 img:hover {
+  filter: brightness(50%);
+}
+
+/*Paragraphs*/
+#Rating {
+  padding-left: 55px;
+  font-size: 17px;
+}
+#reviews,
+#renter {
+  font-size: 17px;
+  padding-left: 10px;
+  text-decoration: underline;
+  font-family: sans-serif;
+}
+
+/* floating menu */
+main {
+  margin-bottom: 200%;
+}
+.floating-menu {
+  padding: 30px;
+  width: 420px;
+  z-index: 1;
+  position: fixed;
+  box-shadow: inset rgb(213, 208, 202);
+  right: 115px;
+  top: 200px;
+  height: 500px;
+}
+.floating-menu a,
+.floating-menu h3 {
+  font-size: 0.9em;
+  display: block;
+  margin: 0 0.5em;
+  color: white;
+}
+
+.floating-menu > #Rating {
+  position: relative;
+  left: 170px;
+}
+
+.floating-menu > span {
+  font-size: larger;
+}
+#price {
+  font-weight: bold;
+  font-size: 2em;
+}
