--- a/src/app/Cpmponents/card-details/card-details.component.html
+++ b/src/app/Cpmponents/card-details/card-details.component.html
@@ -1,6 +1,5 @@
 <div class="container">
-  <main>
-    <div class="row">
+  <main class="row">
       <div class="col-sm-6 col-md-12">
         <div class="h3" style="padding-left: 40px; color: rgb(70, 70, 70)">
           Centre place Graslin - Private room La Cambronne
@@ -60,36 +59,51 @@
           </div>
         </div>
       </div>
-    </div>
   </main>
-  <div class="floating-menu shadow p-3 mb-5 bg-white rounded">
-    <span id="price">$41<span style="font-weight: 100;font-size: medium;"> night</span></span>
-    <span id="Rating"
-    ><svg
-      xmlns="http://www.w3.org/2000/svg"
-      width="18"
-      height="18"
-      fill="currentColor"
-      class="bi bi-star-fill"
-      viewBox="0 0 16 16"
+  <div class="row col-3 floating-menu shadow p-3 mb-5 bg-white rounded">
+    <span id="price"
+      >$41<span style="font-weight: 100; font-size: medium"> night</span></span
     >
-      <path
-        d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"
-      />
-    </svg>
-    4.98
-  </span>
-  <!-- datePicker -->
-  <mat-form-field>
-    <mat-label>Enter a date range</mat-label>
-    <mat-date-range-input [rangePicker]="picker">
-      <input matStartDate placeholder="Start date">
-      <input matEndDate placeholder="End date">
-    </mat-date-range-input>
-    <mat-hint>MM/DD/YYYY – MM/DD/YYYY</mat-hint>
-    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-    <mat-date-range-picker #picker></mat-date-range-picker>
-  </mat-form-field>
+    <span id="Rating"
+      ><svg
+        xmlns="http://www.w3.org/2000/svg"
+        width="18"
+        height="18"
+        fill="currentColor"
+        class="bi bi-star-fill"
+        viewBox="0 0 16 16"
+      >
+        <path
+          d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"
+        />
+      </svg>
+      4.98
+    </span><br><br>
+    <form>
+      <!-- datePicker -->
+      <mat-form-field class="container">
+        <mat-label>Enter a date range</mat-label>
+        <mat-date-range-input [rangePicker]="picker">
+          <input matStartDate placeholder="Start date" />
+          <input matEndDate placeholder="End date" />
+        </mat-date-range-input>
+        <mat-hint>MM/DD/YYYY – MM/DD/YYYY</mat-hint>
+        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+        <mat-date-range-picker #picker></mat-date-range-picker>
+      </mat-form-field><br><br>   
+
+      <div class="col-12 form-outline">
+        <label class="form-label" for="guestNum">Guests</label>
+        <input id="guestNum"  type="number"class="form-control" />
+    </div><br><br>
+
+    <button type="submit" class="container btn btn-danger">Reserve</button>
+    <hr>
+    <span style="font-weight: bold; font-size: large;">Total</span>
+    <span id="total">$<span>308</span></span>
+    </form>
   </div>
-  <p>jjjjjjjjjjjjjjjjjjjjjj</p>
+  <div class="row">
+    <p>hhhhhhhhhhh</p>
+  </div>
 </div>
