--- a/src/app/Cpmponents/search/search.component.html
+++ b/src/app/Cpmponents/search/search.component.html
@@ -42,7 +42,7 @@
                   </select><br>
 
                                <!-- datePicker -->
-                               <mat-form-field>
+                               <mat-form-field class="container">
                                 <mat-label>Enter a date range</mat-label>
                                 <mat-date-range-input [rangePicker]="picker">
                                   <input matStartDate placeholder="Start date">
