--- a/src/app/Cpmponents/Cards/cards/cards.component.css
+++ b/src/app/Cpmponents/Cards/cards/cards.component.css
@@ -45,23 +45,21 @@
 
 
 /* Cards Section Layout*/
-
-
-#main-caurosel:hover{
-  border: 5px solid rgb(255, 255, 255);
-
-
-} 
-.carousel-inner {
+.carousel-inner{
   border-radius: 15px;
-
+  width:100%;
 }
 
  #main-caurosel {
   width: 520px;
   margin: 0 auto;
   height:350px;
-}   
+  
+}
+
+img{
+  width:100%;
+}
 
 /*  End Of Cards Section Layout*/
 
@@ -77,11 +75,11 @@
   Circular, -apple-system, BlinkMacSystemFont, Roboto, Helvetica Neue, sans-serif;
   font-size:16px;
 }
-   div  #Duration{
+   div  #Duration #distance{
   background-color: #fff;
   font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   font-size: 15px; 
-  color:grey;
+  color:rgb(134, 131, 131);
   padding-left: 0px;
   line-height:1px;
 
@@ -108,6 +106,7 @@
 
 
 
+
 /* End Of Paragraphs Section*/
 
 
@@ -127,5 +126,7 @@
 #main-caurosel:hover .like-icon {
   visibility: visible;
 }
+
+
 
 
