--- a/src/app/Cpmponents/Cards/cards/cards.component.css
+++ b/src/app/Cpmponents/Cards/cards/cards.component.css
@@ -2,7 +2,6 @@
  .carousel-indicators button {
     width: 10px;
     height: 10px;
-    background-color: rgba(255, 255, 255, 0.5);
     opacity:initial;
     border-radius: 50%;
   } 
@@ -14,7 +13,6 @@
   display: inline-block;
   padding: 10px 15px;
   transition: background-color .1s ease;
-  background-color: #b2b2b2;
 }
 
 
@@ -47,18 +45,17 @@
 /* Cards Section Layout*/
 .carousel-inner{
   border-radius: 15px;
-  width:100%;
 }
 
- #main-caurosel {
-  width: 520px;
-  margin: 0 auto;
-  height:350px;
-  
-}
 
 img{
-  width:100%;
+  width: 304px;
+  height: 289px;
+}
+
+li{
+  list-style: none;
+  width: 304px;
 }
 
 /*  End Of Cards Section Layout*/
@@ -69,6 +66,10 @@ img{
 
 /*Paragraphs Section*/
 
+#card-body{
+  width: 304px;
+  height: 102px;
+}
 
 #Location{
   font-family: 
@@ -76,7 +77,6 @@ img{
   font-size:16px;
 }
    div  #Duration #distance{
-  background-color: #fff;
   font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   font-size: 15px; 
   color:rgb(134, 131, 131);
@@ -89,19 +89,25 @@ img{
  div p #Price {
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, Helvetica Neue, sans-serif;
   font-size: 16px;
-  color: rgb(32, 32, 32);
 }
 
 #Rating {
   padding-bottom:200px;
-  padding-left: 450px;
+  padding-left: 125px;
   position:fixed;
-  display: flex;
   align-items: center;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 14px;
-  color: rgb(2, 2, 2);
 } 
+
+#card-body p{
+  margin: 5px;
+  
+}
+
+#distance{
+  color: grey;
+}
 
 
 
@@ -125,6 +131,15 @@ img{
 
 #main-caurosel:hover .like-icon {
   visibility: visible;
+}
+
+/* grid system */
+
+ul{
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  column-gap: normal;
+  row-gap:inherit;
 }
 
 
