--- a/src/app/Cpmponents/Cards/cards/cards.component.css
+++ b/src/app/Cpmponents/Cards/cards/cards.component.css
@@ -1,20 +1,17 @@
 /*Buttons Section*/
- .carousel-indicators button {
-    width: 10px;
-    height: 10px;
-    opacity:initial;
-    border-radius: 50%;
-  } 
- 
-  
-   
+.carousel-indicators button {
+  width: 10px;
+  height: 10px;
+  opacity: initial;
+  border-radius: 50%;
+}
+
 /*button shape*/
 #main-caurosel span {
   display: inline-block;
   padding: 10px 15px;
-  transition: background-color .1s ease;
+  transition: background-color 0.1s ease;
 }
-
 
 .carousel-control-prev-icon,
 .carousel-control-next-icon {
@@ -23,100 +20,83 @@
   border-radius: 50% !important;
 }
 
-
- /*Hovering*/
+/*Hovering*/
 .carousel-control-prev,
 .carousel-control-next {
   visibility: hidden;
-  opacity: 0; 
+  opacity: 0;
 }
 
 #main-caurosel:hover .carousel-control-prev,
 #main-caurosel:hover .carousel-control-next {
   visibility: visible;
   opacity: 1;
-  
 }
-
 
 /*End Of Buttons Section*/
 
-
 /* Cards Section Layout*/
-.carousel-inner{
+.carousel-inner {
   border-radius: 15px;
 }
 
-
-img{
+img {
   width: 304px;
   height: 289px;
 }
 
-li{
+li {
   list-style: none;
   width: 304px;
 }
 
 /*  End Of Cards Section Layout*/
 
-
-
-
-
 /*Paragraphs Section*/
 
-#card-body{
+#card-body {
   width: 304px;
   height: 102px;
 }
 
-#Location{
-  font-family: 
-  Circular, -apple-system, BlinkMacSystemFont, Roboto, Helvetica Neue, sans-serif;
-  font-size:16px;
+#Location {
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    Helvetica Neue, sans-serif;
+  font-size: 16px;
 }
-   div  #Duration #distance{
-  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  font-size: 15px; 
-  color:rgb(134, 131, 131);
+div #Duration #distance {
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-size: 15px;
+  color: rgb(134, 131, 131);
   padding-left: 0px;
-  line-height:1px;
-
+  line-height: 1px;
 }
 
-
- div p #Price {
-  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, Helvetica Neue, sans-serif;
+div p #Price {
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    Helvetica Neue, sans-serif;
   font-size: 16px;
 }
 
 #Rating {
-  padding-bottom:200px;
-  padding-left: 125px;
-  position:fixed;
+  padding-bottom: 200px;
+  padding-left: 110px;
+  position: relative;
   align-items: center;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 14px;
-} 
-
-#card-body p{
-  margin: 5px;
-  
 }
 
-#distance{
+#card-body p {
+  margin: 5px;
+}
+
+#distance {
   color: grey;
 }
 
-
-
-
-
 /* End Of Paragraphs Section*/
-
-
-
 
 /*Like Icon*/
 .like-icon {
@@ -135,13 +115,31 @@ li{
 
 /* grid system */
 
-ul{
+ul {
   display: grid;
   grid-template-columns: auto auto auto auto;
   column-gap: normal;
-  row-gap:inherit;
+  row-gap: inherit;
 }
 
+/* responsive grid */
+@media only screen and (max-width: 560px) {
+  ul {
+    display: grid;
+    grid-template-columns: auto;
+  }
 
+  @media only screen and (max-width: 930px) {
+    ul {
+      display: grid;
+      grid-template-columns: auto auto;
+    }
 
-
+    @media only screen and (max-width: 1125px) {
+      ul {
+        display: grid;
+        grid-template-columns: auto auto auto;
+      }
+    }
+  }
+}
