--- a/src/styles.css
+++ b/src/styles.css
@@ -10,3 +10,10 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+app-sign-up {
+  background-color: red;
+}
+
+:root {
+  --mdc-dialog-container-shape: 50px;
+}
