--- a/src/app/Cpmponents/sign-up/sign-up.component.html
+++ b/src/app/Cpmponents/sign-up/sign-up.component.html
@@ -16,6 +16,7 @@
                   #Name
                   maxlength="15"
                   placeholder="Ex. Mohamed Ahmed"
+                  formControlName="nameControl"
                 />
                 <mat-hint align="end" 
                 >{{ Name.value.length }}/15
