--- a/src/app/Cpmponents/Cards/cards/cards.component.css
+++ b/src/app/Cpmponents/Cards/cards/cards.component.css
@@ -122,24 +122,36 @@ ul {
   row-gap: inherit;
 }
 
-/* responsive grid */
-@media only screen and (max-width: 560px) {
+@media screen and (min-width:52px){
+  .container{
+  max-width: 549px;
+  display: grid;
+  grid-template-columns: auto;
+ }
+}
+
+@media screen and (min-width:555px){
+  .container{
+  max-width: 955px;
+  display: grid;
+  grid-template-columns: auto auto;
+ }
+}
+
+@media screen and (min-width:956px){
+  .container{
+  max-width: 1100px;
+  display: grid;
+  grid-template-columns: auto auto auto; 
+ }
+}
+
+@media screen and (min-width:1101px){
   ul {
+    max-width: inherit;
     display: grid;
-    grid-template-columns: auto;
-  }
-
-  @media only screen and (max-width: 930px) {
-    ul {
-      display: grid;
-      grid-template-columns: auto auto;
-    }
-
-    @media only screen and (max-width: 1125px) {
-      ul {
-        display: grid;
-        grid-template-columns: auto auto auto;
-      }
-    }
+    grid-template-columns: auto auto auto auto;
   }
 }
+
+
