--- a/src/app/Cpmponents/header/header.component.css
+++ b/src/app/Cpmponents/header/header.component.css
@@ -14,5 +14,7 @@ a{
 vr{
     height: 100%;
 }
-.sign-Up{
-background-color: red;}
+
+
+/* div.sign-Up{border:1px solid white ;border-radius: 5px;
+} */
