card-details done

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,6 @@
 <app-header></app-header>
 <app-footer></app-footer> 
-<app-cards></app-cards>
-
+<app-card-details></app-card-details>
 
 <!-- wont be visible but must be here -->
 <app-filters></app-filters>
