--- a/src/app/Cpmponents/card-details/card-details.component.css
+++ b/src/app/Cpmponents/card-details/card-details.component.css
@@ -72,11 +72,10 @@ main {
 .floating-menu {
   padding: 30px;
   width: 420px;
-  z-index: 1;
-  position: fixed;
+  z-index: 100;
+  position:sticky;
   right: 115px;
   top: 300px;
-  height: 500px;
 }
 .floating-menu a,
 .floating-menu h3 {
@@ -103,4 +102,25 @@ main {
     font-size: large;
     position: relative;
     left: 280px;
+}
+
+
+/* cards */
+li{
+  list-style: none;
+}
+.rooms ul{
+  display: flex;
+}
+.rooms ul li{
+  padding: 30px;
+}
+
+/* aminities */
+.aminities ul {
+  display: block;
+}
+
+.aminities ul li{
+  margin-bottom: 30px;
 }
