--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,11 @@
 <app-header></app-header>
  <!-- <app-cards></app-cards> -->
-<app-footer></app-footer> 
-<!-- <app-card-details></app-card-details>  -->
+<!-- <app-footer></app-footer>  -->
+ <!-- <app-card-details></app-card-details>   -->
 
 <!-- wont be visible but must be here -->
-<app-filters></app-filters>
-<app-search></app-search>
+<!-- <app-filters></app-filters>
+<app-search></app-search> -->
 <app-dashboard></app-dashboard>
+
+<app-cards></app-cards>
