--- a/src/app/Cpmponents/header/header.component.html
+++ b/src/app/Cpmponents/header/header.component.html
@@ -53,7 +53,7 @@
           <li><button class="dropdown-item" (click)="openSignInDialog()"> Sign In </button></li>
           <li><button class ="dropdown-item" (click)="openSignUpDialog()" >Sign up</button></li>
           <li><hr class="dropdown-divider"></li>
-          <li><a class="dropdown-item" href="#">Airbnb your home</a></li>
+          <li><a class="dropdown-item" href="#">Reservations</a></li>
           <li><a class="dropdown-item" href="#">Help</a></li>
         </ul>
       </div>
