adding error component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,21 @@
 <app-header></app-header>
 <app-footer></app-footer> 
-<app-cards></app-cards>
+<app-error></app-error>
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- no one touches this section please -->
+
 <!-- wont be visible but must be here -->
-<!-- <app-filters></app-filters>
+<app-filters></app-filters>
 <app-search></app-search>
-<app-dashboard></app-dashboard> -->
