--- a/src/app/Cpmponents/error/error.component.html
+++ b/src/app/Cpmponents/error/error.component.html
@@ -1,11 +1,19 @@
-
-	<div id="notfound">
-		<div class="notfound">
-			<div class="notfound-404">
-				<h1>404</h1>
-			</div>
-			<h2>Oops! This Page Could Not Be Found</h2>
-			<p>Sorry but the page you are looking for does not exist, have been removed. name changed or is temporarily unavailable</p>
-			<a href="#">Go To Homepage</a>
-		</div>
-	</div>
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="error-template"><br><br><br><br><br>
+                <h1>
+                    Oops!</h1>
+                <h2>
+                    404 Not Found</h2>
+                <div class="error-details">
+                    Sorry, an error has occured, Requested page not found!
+                </div>
+                <div class="error-actions">
+                    <a href="#" class="btn btn-danger btn-lg"><span class="glyphicon glyphicon-home"></span>
+                        Take Me Home </a><a href="#" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-envelope"></span> Contact Support </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
