--- a/src/app/Cpmponents/header/header.component.html
+++ b/src/app/Cpmponents/header/header.component.html
@@ -45,10 +45,15 @@
 
     </ul>
     <ul class="nav navbar-right d-flex align-items-center">
+      
       <li class="me-5">
-        <a href="#" style="color:rgb(147, 142, 142); font-weight:500;"><span>Airbnb your home</span></a>
-      </li>
-   <li class=" dropdown">
+        <a href="add-property"  style=" color:rgb(147, 142, 142); font-weight:500;">
+          <span>Airbnb your home</span></a>
+      
+        </li>
+  
+
+      <li class=" dropdown">
     <div style=" border-radius: 25px;border:1px solid grey; padding:7px; width:80px">
         <a class="" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             <svg class="me-3" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"/></svg>
