--- a/src/app/Cpmponents/add-property/add-property.component.html
+++ b/src/app/Cpmponents/add-property/add-property.component.html
@@ -1,1 +1,13 @@
-Hello
+<div class="container">
+
+    <div class="row">
+        <div class="col-md-12">
+   
+
+            <h2> 
+                Add your Property Details
+            </h2>
+
+        </div>
+    </div>
+</div>
