--- a/src/app/Cpmponents/header/header.component.html
+++ b/src/app/Cpmponents/header/header.component.html
@@ -40,7 +40,7 @@
         </a>
       </li>
       <!-- filters button -->
-      <li><button type="button" class=" ms-3 btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#filtersModal" ><svg xmlns="http://www.w3.org/2000/svg"           height="2em"
+      <li><button type="button" class=" ms-3 btn --bs-dark-border-subtle shadow-sm p-2 mb-2 bg-white rounded" data-bs-toggle="modal" data-bs-target="#filtersModal" ><svg xmlns="http://www.w3.org/2000/svg"           height="2em"
         viewBox="0 0 256 256" id="sliders-horizontal"><rect width="256" height="256" fill="none"></rect><line x1="148" x2="40" y1="171.994" y2="171.994" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="16"></line><line x1="216" x2="188" y1="171.994" y2="171.994" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="16"></line><circle cx="168" cy="171.994" r="20" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="16"></circle><line x1="84" x2="40" y1="83.994" y2="83.993" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="16"></line><line x1="216" x2="124" y1="83.993" y2="83.994" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="16"></line><circle cx="104" cy="83.994" r="20" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="16"></circle></svg>Filters</button></li>
 
     </ul>
