--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,20 @@
-<!-- <app-header></app-header> -->
- <!-- <app-cards></app-cards> -->
-<!-- <app-footer></app-footer>  -->
+ <!-- <app-header></app-header>
+  <app-cards></app-cards> 
+<app-footer></app-footer>   -->
 <!-- <app-card-details></app-card-details>  -->
 
 <!-- wont be visible but must be here -->
-<!-- <app-filters></app-filters>
+ <!-- <app-filters></app-filters>
 <app-search></app-search>
-<app-dashboard></app-dashboard> -->
+ <app-dashboard></app-dashboard>  -->
+ <!-- <app-filters></app-filters>
+<app-search></app-search>
+<app-header></app-header>
+<app-footer></app-footer> 
+<app-card-details></app-card-details>   -->
+  <!-- <app-dashboard></app-dashboard>    -->
+
+
+ <!-- <app-test></app-test>  -->
+ <app-navbar-dashboard></app-navbar-dashboard>
+ <app-charts-dashboard></app-charts-dashboard>
