--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,3 +7,7 @@
 <!-- <app-filters></app-filters>
 <app-search></app-search>
 <app-dashboard></app-dashboard> -->
+
+
+<app-amenities-dasboard></app-amenities-dasboard>
+<app-navbar-dashboard></app-navbar-dashboard>
