--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,5 +9,6 @@
 <app-dashboard></app-dashboard> -->
 
 
-<app-amenities-dasboard></app-amenities-dasboard>
+<!-- <app-amenities-dasboard></app-amenities-dasboard> -->
 <app-navbar-dashboard></app-navbar-dashboard>
+<app-dashboard></app-dashboard>
