--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,5 +10,12 @@
 
 
 <!-- <app-amenities-dasboard></app-amenities-dasboard> -->
-<app-navbar-dashboard></app-navbar-dashboard>
-<app-dashboard></app-dashboard>
+<!-- <app-navbar-dashboard></app-navbar-dashboard>
+<app-dashboard></app-dashboard> -->
+<app-header></app-header>
+<app-cards></app-cards>
+<app-card-details></app-card-details>
+
+<app-search></app-search>
+<app-filters></app-filters>
+<app-footer></app-footer>
