--- a/src/app/Cpmponents/card-details/card-details.component.html
+++ b/src/app/Cpmponents/card-details/card-details.component.html
@@ -152,7 +152,7 @@
 
         <div class="col-12 form-outline">
           <label class="form-label" for="guestNum">Guests</label>
-          <input id="guestNum" type="number" class="form-control" min="1" />
+          <input id="guestNum" type="number" class="form-control" />
         </div>
         <br /><br />
 
