--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,19 +3,17 @@
 <app-footer></app-footer>   -->
 <!-- <app-card-details></app-card-details>  -->
 
-<!-- wont be visible but must be here -->
-<!-- <app-filters></app-filters>
-<app-search></app-search>
-<app-dashboard></app-dashboard> -->
-
-
-<!-- <app-amenities-dasboard></app-amenities-dasboard> -->
-<!-- <app-navbar-dashboard></app-navbar-dashboard>
-<app-dashboard></app-dashboard> -->
 <app-header></app-header>
-<app-cards></app-cards>
-<app-card-details></app-card-details>
+<app-footer></app-footer>
+<app-your-properties></app-your-properties>
 
+
+
+
+
+
+
+<!-- ignore this section -->
+<!-- wont be visible but must be here -->
 <app-search></app-search>
 <app-filters></app-filters>
-<app-footer></app-footer>
