--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,11 +11,17 @@
 
 <!-- <app-amenities-dasboard></app-amenities-dasboard> -->
 <!-- <app-navbar-dashboard></app-navbar-dashboard>
-<app-dashboard></app-dashboard> -->
-<app-header></app-header>
+ <app-header></app-header>
 <app-cards></app-cards>
 <app-card-details></app-card-details>
 
 <app-search></app-search>
 <app-filters></app-filters>
-<app-footer></app-footer>
+<app-footer></app-footer> -->
+<!-- <app-dashboard></app-dashboard>
+<app-navbar-dashboard></app-navbar-dashboard> -->
+<!-- <app-footer></app-footer> -->
+ <app-dashboard></app-dashboard>
+ <!-- <app-navbar-dashboard></app-navbar-dashboard>
+ <app-amenities-dasboard></app-amenities-dasboard> -->
+<app-charts-dashboard></app-charts-dashboard>
