--- a/src/app/Cpmponents/search/search.component.html
+++ b/src/app/Cpmponents/search/search.component.html
@@ -4,7 +4,7 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h1 class="modal-title fs-5" id="exampleModalLabel" style="color: red;"> Book unique home and experiences</h1>
+          <h1 class="modal-title fs-5" id="exampleModalLabel" style="color: rgb(213, 34, 34);"> Book unique home and experiences</h1>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
