--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,31 +1,9 @@
- <!-- <app-header></app-header>
-  <app-cards></app-cards> 
-<app-footer></app-footer>   -->
-<!-- <app-card-details></app-card-details>  -->
-
 <app-header></app-header>
 <app-footer></app-footer>
-<app-your-properties></app-your-properties>
+<router-outlet></router-outlet>
 
 
 
-
-
-
-
-<!-- ignore this section -->
-<!-- wont be visible but must be here -->
-<!-- <app-filters></app-filters>
-<app-search></app-search>
-<app-dashboard></app-dashboard> -->
-
-
-<!-- <app-amenities-dasboard></app-amenities-dasboard> -->
-<!-- <app-navbar-dashboard></app-navbar-dashboard>
- <app-header></app-header>
-<app-cards></app-cards>
-<app-card-details></app-card-details>
-
-<app-search></app-search>
+<!-- دول لازم يفضلوا هنا محدش يكومنت -->
 <app-filters></app-filters>
-<app-footer></app-footer>
+<app-search></app-search>
