--- a/src/app/Cpmponents/card-details/card-details.component.html
+++ b/src/app/Cpmponents/card-details/card-details.component.html
@@ -19,8 +19,6 @@
         </svg>
         4.98
       </span>
-
-      <Span id="reviews">24 reviews </Span>
       <span id="renter">renter</span>
     </div>
     <div id="largeimg1">
@@ -110,8 +108,30 @@
         </li>
       </ul>
     </div>
+    <div class="rules">
+      <h1>What is are the rules here</h1>
+<!-- list of rules -->
+      <ul>
+        <li>
+          <img width="30" height="30" src="https://img.icons8.com/dotty/80/washing.png" alt="washing"/><span style="margin-left: 10px; font-size: larger;">Washer</span>
+        </li>
+        <li>
+          <img width="30" height="30" src="https://img.icons8.com/dotty/80/washing.png" alt="washing"/><span style="margin-left: 10px; font-size: larger;">Washer</span>
+        </li>
+        <li>
+          <img width="30" height="30" src="https://img.icons8.com/dotty/80/washing.png" alt="washing"/><span style="margin-left: 10px; font-size: larger;">Washer</span>
+        </li>
+        <li>
+          <img width="30" height="30" src="https://img.icons8.com/dotty/80/washing.png" alt="washing"/><span style="margin-left: 10px; font-size: larger;">Washer</span>
+        </li>
+        <li>
+          <img width="30" height="30" src="https://img.icons8.com/dotty/80/washing.png" alt="washing"/><span style="margin-left: 10px; font-size: larger;">Washer</span>
+        </li>
+      </ul>
+    </div>
    </div>
-    <div class="col-3 floating-menu shadow p-3 mb-5 bg-white rounded">
+   <!-- floating menu -->
+    <div class="col-3 floating-menu shadow p-3 mb-5 bg-white rounded" style="height: fit-content;">
       <span id="price"
         >$41<span style="font-weight: 100; font-size: medium">
           night</span
