--- a/src/app/Cpmponents/Footer/footer/Footer/footer.component.html
+++ b/src/app/Cpmponents/Footer/footer/Footer/footer.component.html
@@ -65,15 +65,15 @@
               </ul>
 
               <ul class="list-unstyled">
-                <li><a class="dropdown-item" href="#">Hosting</a></li>
-                <li><a class="dropdown-item" href="#">Airbnb your home</a></li>
+                <li><a class="dropdown-item" href="add-property">Hosting</a></li>
+                <li><a class="dropdown-item" href="add-property">Airbnb your home</a></li>
                 <li><a class="dropdown-item" href="#">AirCover for Hosts</a></li>
                 <li><a class="dropdown-item" href="#">Explore hosting resources</a></li>
                 <li><a class="dropdown-item" href="#">How to host responsibly</a></li>
               </ul>
 
               <ul class="list-unstyled">
-                <li><a class="dropdown-item" href="#">Airbnb your home</a></li>
+                <li><a class="dropdown-item" href="add-property">Airbnb your home</a></li>
                 <li><a class="dropdown-item" href="#">Newsroom</a></li>
                 <li><a class="dropdown-item" href="#">Learn about new features</a></li>
                 <li><a class="dropdown-item" href="#">Letter from our founders</a></li>
