--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
 <app-header></app-header>
 <app-footer></app-footer>
 <router-outlet></router-outlet>
-
+<app-add-property></app-add-property>
 
 
 <!-- دول لازم يفضلوا هنا محدش يكومنت -->
