--- a/src/app/Cpmponents/search/search.component.html
+++ b/src/app/Cpmponents/search/search.component.html
@@ -1,4 +1,7 @@
-
+<style>
+  ::ng-deep .cdk-overlay-container {
+    z-index: 2000;}
+</style>
   <!-- Modal -->
   <div class="modal fade" id="searchModal" tabindex="-1" aria-labelledby="searchModalLabel" aria-hidden="true">
     <div class="modal-dialog">
