--- a/src/app/Cpmponents/card-details/card-details.component.html
+++ b/src/app/Cpmponents/card-details/card-details.component.html
@@ -21,41 +21,46 @@
       </span>
       <span id="renter">renter</span>
     </div>
-    <div id="largeimg1">
-      <img
-        src="https://a0.muscache.com/im/pictures/miso/Hosting-668146487515150072/original/8ff2a532-e0cd-41a2-9164-554c4d9eb28a.jpeg?im_w=960"
-        alt="Image 1"
-      />
-    </div>
-    <div id="smallimages2">
-      <div class="col-sm-12 col-md-12" id="2a">
-        <img
-          src="https://a0.muscache.com/im/pictures/miso/Hosting-668146487515150072/original/7da9fd6a-8d6c-4954-88b0-1fc52abc9cfd.jpeg?im_w=720"
-          alt="Image 2"
-        />
-      </div>
 
-      <div class="col-sm-12 col-md-12" id="2b">
+
+    <div class="container">
+      <div id="largeimg1">
         <img
-          src="https://a0.muscache.com/im/pictures/miso/Hosting-26300485/original/35989289-d57f-449a-b23b-0c285e715ee1.jpeg?im_w=720"
-          alt="Image 3"
+          src="https://a0.muscache.com/im/pictures/miso/Hosting-668146487515150072/original/8ff2a532-e0cd-41a2-9164-554c4d9eb28a.jpeg?im_w=960"
+          alt="Image 1"
         />
+      </div>
+      <div id="smallimages2">
+        <div class="col-sm-12 col-md-12" id="2a">
+          <img
+            src="https://a0.muscache.com/im/pictures/miso/Hosting-668146487515150072/original/7da9fd6a-8d6c-4954-88b0-1fc52abc9cfd.jpeg?im_w=720"
+            alt="Image 2"
+          />
+        </div>
+  
+        <div class="col-sm-12 col-md-12" id="2b">
+          <img
+            src="https://a0.muscache.com/im/pictures/miso/Hosting-26300485/original/35989289-d57f-449a-b23b-0c285e715ee1.jpeg?im_w=720"
+            alt="Image 3"
+          />
+        </div>
+      </div>
+      <div id="smallimages3">
+        <div class="col-sm-12 col-md-12" id="2c">
+          <img
+            src="https://a0.muscache.com/im/pictures/miso/Hosting-26300485/original/061a1f0a-27f0-4bf6-acee-05e978030487.jpeg?im_w=720"
+            alt="Image 4"
+          />
+        </div>
+        <div class="col-sm-12 col-md-12" id="2d">
+          <img
+            src="https://a0.muscache.com/im/pictures/miso/Hosting-26300485/original/88cec5b3-01ab-4d26-8597-bd3b1fc36e01.jpeg?im_w=720"
+            alt="Image 5"
+          />
+        </div>
       </div>
     </div>
-    <div id="smallimages3">
-      <div class="col-sm-12 col-md-12" id="2c">
-        <img
-          src="https://a0.muscache.com/im/pictures/miso/Hosting-26300485/original/061a1f0a-27f0-4bf6-acee-05e978030487.jpeg?im_w=720"
-          alt="Image 4"
-        />
-      </div>
-      <div class="col-sm-12 col-md-12" id="2d">
-        <img
-          src="https://a0.muscache.com/im/pictures/miso/Hosting-26300485/original/88cec5b3-01ab-4d26-8597-bd3b1fc36e01.jpeg?im_w=720"
-          alt="Image 5"
-        />
-      </div>
-    </div>
+    
   </div>
   <hr>
   <div class="row container" >
