--- a/src/app/Cpmponents/filters/filters.component.html
+++ b/src/app/Cpmponents/filters/filters.component.html
@@ -22,20 +22,15 @@
                 type="number"
                 class="form-control value-input"
                 id="minPriceInput"
-                min="1"
-                max="10000"
-                value=""
               />
             </div>
             <div class="mb-3">
               <!-- Price input -->
-              <label for="minPriceInput" class="form-label">to:</label>
+              <label for="maxPriceInput" class="form-label">to:</label>
               <input
                 type="number"
                 class="form-control value-input"
-                id="minPriceInput"
-                min="1"
-                max="10000"
+                id="maxPriceInput"
                 value=""
               />
             </div>
