--- a/src/app/Cpmponents/Cards/cards/cards.component.html
+++ b/src/app/Cpmponents/Cards/cards/cards.component.html
@@ -44,7 +44,7 @@
     </div>
     <!-- card body -->
     <div id="card-body">
-      <p id="Location" style="margin-top: 15px;">{{c.Address}}
+      <p id="Location" style="margin-top: 15px;">{{c.address}}
         <span id="Rating"
         ><svg
           xmlns="http://www.w3.org/2000/svg"
@@ -58,11 +58,10 @@
             d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"
           />
         </svg>
-        {{c.Rating}}
+        {{c.rating}}
       </span>
       </p>
-      <!-- <p id="distance">5 kilometers away</p> -->
-      <p id="price">${{c.pricePerNight}} AUD total</p>
+      <p id="price">${{c.pricePerNight}} EGP</p>
     </div>
   </li>
 </ul>
